[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.even:main"
brain-calc = "brain_games.games.calc:main"
brain-gcd = "brain_games.games.gcd:main"
brain-progression = "brain_games.games.progression:main"
brain-prime = "brain_games.games.prime:main"

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4
show-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "UP",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"